make top level panel uses full height to stop double scrollbars #1162

--- a/arches_her/media/css/project.css
+++ b/arches_her/media/css/project.css
@@ -1009,3 +1009,16 @@ span.rp-tile-title {
 .ep-edits {
     z-index: 12000;
 }
+
+/* Makes side panels cover the whole height of the page when the UI stacks in mobile mode */
+.ep-help-panel{
+    height: 100%;
+}
+
+.ep-edits-panel{
+    height: 100%;
+}
+
+.ep-notifs-panel{
+    height: 100%;
+}
